--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^3.6.0",
     "vue": "^3.4.21",
     "vue-chartjs": "^5.3.1",
+    "vue-qrcode-reader": "^5.5.6",
     "vue-router": "^4.3.2",
     "vuetify": "^3.6.5"
   },
