--- a/HLVS/build.gradle
+++ b/HLVS/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
     implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5'
+    implementation 'com.google.api-client:google-api-client:1.31.5'
+    implementation 'com.google.http-client:google-http-client-jackson2:1.39.2'
 }
 
 tasks.named('test') {
