--- a/HLVS/src/main/resources/application.properties
+++ b/HLVS/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.sql.init.mode=always
 
 jwt.secret=94c9b14f-b497-4f25-bc02-4f5e1a512c3d
 jwt.exptime=1296000000
+google.clientId=YOUR_GOOGLE_CLIENT_ID 
+#AQUI FALTA EL ID
+
