--- a/HLVS/build.gradle
+++ b/HLVS/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5'
     implementation 'com.google.api-client:google-api-client:1.31.5'
     implementation 'com.google.http-client:google-http-client-jackson2:1.39.2'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 }
 
 tasks.named('test') {
