--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
+    "google-auth-library": "^9.11.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-chartjs": "^5.3.1",
     "vue-qrcode-reader": "^5.5.6",
     "vue-router": "^4.3.2",
+    "vue3-google-login": "^2.0.26",
     "vuetify": "^3.6.5"
   },
   "devDependencies": {
