--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^3.6.0",
     "google-auth-library": "^9.11.0",
     "pinia": "^2.1.7",
+    "sweetalert2": "^11.12.0",
     "vue": "^3.4.21",
     "vue-chartjs": "^5.3.1",
     "vue-qrcode-reader": "^5.5.6",
