--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
     "google-auth-library": "^9.11.0",
+    "jwt-decode": "^4.0.0",
     "pinia": "^2.1.7",
     "sweetalert2": "^11.12.0",
     "vue": "^3.4.21",
