--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "google-auth-library": "^9.11.0",
     "jwt-decode": "^4.0.0",
     "pinia": "^2.1.7",
+    "qrcode-vue3": "^1.6.8",
     "sweetalert2": "^11.12.0",
+    "uuid": "^10.0.0",
     "vue": "^3.4.21",
     "vue-chartjs": "^5.3.1",
     "vue-qrcode-reader": "^5.5.6",
