Eliminar el role de Visitant Funcional

--- a/HLVS-API/src/main/resources/application.properties
+++ b/HLVS-API/src/main/resources/application.properties
@@ -24,5 +24,7 @@ jwt.exptime=1296000000
 
 spring.mvc.static-path-pattern=/**
 
-
-
+## swagger-ui custom path
+#springdoc.swagger-ui.enabled=true
+#springdoc.api-docs.enabled=true
+#springdoc.swagger-ui.path=/HLVSDocumentation.html
