--- a/HLVS-API/build.gradle
+++ b/HLVS-API/build.gradle
@@ -53,6 +53,8 @@ dependencies {
 	implementation 'org.springframework.security:spring-security-config'
 	implementation 'org.springframework.security:spring-security-web'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
+//	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
 }
 
 tasks.named('test') {
