Add: Deploy settings

--- a/HLVS-API/src/main/resources/application.properties
+++ b/HLVS-API/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.mustache.suffix=.html
 #spring.datasource.url=jdbc:postgresql://localhost:5050/api
 #spring.datasource.username=api
 #spring.datasource.password=api
-spring.datasource.url=postgresql://postgres:boVeRrmxxPDomdzmEkxFplEdvWUsQyWa@roundhouse.proxy.rlwy.net:41054/railway
+spring.datasource.url=jdbc:postgresql://roundhouse.proxy.rlwy.net:41054/railway
 spring.datasource.username=postgres
 spring.datasource.password=boVeRrmxxPDomdzmEkxFplEdvWUsQyWa
 
