--- a/HLVS-API/build.gradle
+++ b/HLVS-API/build.gradle
@@ -56,8 +56,16 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.postgresql:postgresql:42.5.1'
+	implementation 'org.postgresql:postgresql:42.7.2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+
+	implementation 'org.apache.poi:poi:5.2.3'
+	implementation 'org.apache.poi:poi-ooxml:5.2.3'
+	//implementation 'org.apache.poi:poi-ooxml-schemas:5.2.3'
+	implementation 'org.apache.xmlbeans:xmlbeans:5.1.1'
+	implementation 'net.lingala.zip4j:zip4j:2.11.5'
+	implementation 'net.lingala.zip4j:zip4j:2.11.5'
 
 //	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
 }
