Enviar correo semi funcional

--- a/HLVS-API/src/main/resources/application.properties
+++ b/HLVS-API/src/main/resources/application.properties
@@ -31,3 +31,12 @@ spring.mvc.static-path-pattern=/**
 #springdoc.swagger-ui.enabled=true
 #springdoc.api-docs.enabled=true
 #springdoc.swagger-ui.path=/HLVSDocumentation.html
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=CREAR CORREO HLVSSSSSSS
+spring.mail.password=PONER EL DE CHATI
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.default-encoding=UTF-8
