--- a/HLVS-API/build.gradle
+++ b/HLVS-API/build.gradle
@@ -66,6 +66,7 @@ dependencies {
 	implementation 'org.apache.xmlbeans:xmlbeans:5.1.1'
 	implementation 'net.lingala.zip4j:zip4j:2.11.5'
 	implementation 'net.lingala.zip4j:zip4j:2.11.5'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
 //	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
 }
