--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
+    "file-saver": "^2.0.5",
     "google-auth-library": "^9.11.0",
     "jwt-decode": "^4.0.0",
     "pinia": "^2.1.7",
@@ -28,7 +29,8 @@
     "vue-qrcode-reader": "^5.5.6",
     "vue-router": "^4.3.2",
     "vue3-google-login": "^2.0.26",
-    "vuetify": "^3.6.5"
+    "vuetify": "^3.6.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
